--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ header p {
   flex-direction: column; 
   align-items: center;
   justify-content: center;
+  background: #F6F6F6;
 }
 
 .last-section h2 {
@@ -187,3 +188,6 @@ footer {
   justify-content: center;
   background: #23272A;
 }
+
+/* TODO: Resposive and Mobile */
+/* TODO: Refactor */
